vlib/v/checker/tests/wrong_return_type_err.vv
module main

struct Val {
	val int
}

fn double_positive(num int) int {
	if num <= 0 {
		return Error{}
	}
	return num * 2
}

fn new_val(num int) Val {
	if num <= 0 {
		return Error{}
	}
	return Val{
		val: num
	}
}

fn main() {
	println(new_val(2))
}
